start of homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="#">Hello</a>
         <nav>
-            <ul>
+            <ul class="nav__links">
                 <li><a href="#">What we do</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Previous Work</a></li>
@@ -19,5 +19,12 @@
         </nav>
         <a href="#"><button>Contact</button></a>
     </header>
+    <div class="title">
+        <h1>Get Online.</h1>
+        <p>Enter your email and one of our team will get in touch!</p>
+    </div>
+    <div class="WWD">
+        <h4>What we do</h4>
+    </div>
 </body>
 </html>
