--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <div class="title">
         <h1>Get Online.</h1>
-        <p>Enter your email and one of our team will get in touch!</p>
+        <p>Give your business that well needed boost with a professional <br> online presence and boost your sales and credibility!</p>
     </div>
     <div class="WWD">
         <h4>What we do</h4>
