--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>NOPA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <a href="#">Hello</a>
@@ -19,12 +21,19 @@
         </nav>
         <a href="#"><button>Contact</button></a>
     </header>
-    <div class="title">
-        <h1>Get Online.</h1>
-        <p>Give your business that well needed boost with a professional <br> online presence and boost your sales and credibility!</p>
+    <div class="Landing">
+        <div class="title">
+            <h1>Get Online.</h1>
+            <p>Give your business that well needed boost with a professional <br> online presence and boost your sales
+                and credibility!</p>
+        </div>
+        <div>
+            <img src="Images/Background.png" class="BackgroundImage">
+        </div>
     </div>
     <div class="WWD">
         <h4>What we do</h4>
     </div>
 </body>
+
 </html>
