--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="#">Hello</a>
+        <a href="#">NOPA</a>
         <nav>
             <ul class="nav__links">
                 <li><a href="#">What we do</a></li>
@@ -32,8 +32,17 @@
         </div>
     </div>
     <div class="WWD">
-        <h4>What we do</h4>
+        <div class="WWDTitle">
+            <h4>What we do</h4>
+        </div>
+        <div class="WWDText">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates incidunt temporibus autem
+                recusandae,
+                tempore tempora laborum reprehenderit ad inventore fugiat iusto cumque sapiente, magnam corporis sequi
+                praesentium eligendi libero odio.</p>
+        </div>
     </div>
+
 </body>
 
 </html>
