--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="#">NOPA</a>
+        <a href="#"><img src="Images/Logo1.png" alt="Logo" width="150px"></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="#">What we do</a></li>
@@ -40,6 +40,7 @@
                 recusandae,
                 tempore tempora laborum reprehenderit ad inventore fugiat iusto cumque sapiente, magnam corporis sequi
                 praesentium eligendi libero odio.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia adipisci doloribus unde corporis praesentium at obcaecati suscipit recusandae voluptates, iusto nisi cupiditate? Obcaecati in ducimus ea dolorum laudantium iste dolorem!</p>
         </div>
     </div>
 
