--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#"><img src="Images/Logo1.png" alt="Logo" width="150px"></a>
         <nav>
             <ul class="nav__links">
-                <li><a href="#">What we do</a></li>
+                <li><a href="#WWD">What we do</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Previous Work</a></li>
             </ul>
@@ -23,27 +23,39 @@
     </header>
     <div class="Landing">
         <div class="title">
-            <h1>Get Online.</h1>
-            <p>Give your business that well needed boost with a professional <br> online presence and boost your sales
-                and credibility!</p>
+            <h1 class="titleText">
+                <span>Get Online.</span>
+            </h1>
+            <p class="titleSub">
+                <span>Give your business that well needed boost with a professional <br> online presence and boost your sales
+                and credibility!</span>
+            </p>
         </div>
         <div>
-            <img src="Images/Background.png" class="BackgroundImage">
+            <!--<img src="Images/Background.png" class="BackgroundImage">-->
         </div>
     </div>
-    <div class="WWD">
+    <div class="WWD" id="WWD">
         <div class="WWDTitle">
             <h4>What we do</h4>
         </div>
         <div class="WWDText">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates incidunt temporibus autem
-                recusandae,
-                tempore tempora laborum reprehenderit ad inventore fugiat iusto cumque sapiente, magnam corporis sequi
-                praesentium eligendi libero odio.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia adipisci doloribus unde corporis praesentium at obcaecati suscipit recusandae voluptates, iusto nisi cupiditate? Obcaecati in ducimus ea dolorum laudantium iste dolorem!</p>
+            <div class="WWDBox">
+                <img src="Images/Social media icon.png" alt="SocialMedia" width="400px">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa natus sed sapiente repudiandae quibusdam officiis sequi, laudantium a aut dolorum, sint nemo vel, quod accusantium qui quaerat placeat eveniet ducimus?</p>
+            </div>
+            <div class="WWDBox">
+                <img src="Images/WWW.png" alt="" width="400px">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti adipisci quae accusantium natus. Quia et, ratione, rem ipsa asperiores maxime sunt corrupti sed cum nemo doloribus cumque ut, explicabo dicta.</p>
+            </div>
+            <div class="WWDBox">
+                <img src="Images/Social media icon.png" alt="" width="400px">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti adipisci quae accusantium natus. Quia et, ratione, rem ipsa asperiores maxime sunt corrupti sed cum nemo doloribus cumque ut, explicabo dicta.</p>
+            </div>
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js" integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
