--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
         </div>
         <div>
-            <!--<img src="Images/Background.png" class="BackgroundImage">-->
+            <img src="Images/deviceframes-removebg.png" class="BackgroundImage">
         </div>
     </div>
     <div class="WWD" id="WWD">
